Handled ClassCastException and added Test cases