@@ -33,6 +33,7 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
         super(name);
     }
     
+    @Test
     public void testSimple() throws Exception {
         try {
             SourceVersion.valueOf("RELEASE_17"); //NOI18N
@@ -75,7 +76,38 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "    }\n"
                         + "}\n");
     }
-
+    
+    @Test
+    public void testSimpleNoHint() throws Exception {
+        try {
+            SourceVersion.valueOf("RELEASE_17"); //NOI18N
+        } catch (IllegalArgumentException ex) {
+            //OK, no RELEASE_17, skip tests
+            return;
+        }
+        HintTest.create()
+                .input("package test;\n"
+                        + "public class Test {\n"
+                        + "   private int test(Object o, Object p){\n"
+                        + "        if(o instanceof String){\n"
+                        + "            String s = (String)o;\n"
+                        + "            System.out.println(s);\n"
+                        + "        }else if(p instanceof Integer){\n"
+                        + "            Integer i = (Integer)p;\n"
+                        + "            System.out.println(i);\n"
+                        + "        }else{\n"
+                        + "             System.out.println(\"else\");\n"
+                        + "         }\n"
+                        + "        return -1;\n"
+                        + "    }\n"
+                        + "}\n"
+                )
+                .sourceLevel("17")
+                .options("--enable-preview")
+                .run(ConvertToSwitchPatternInstanceOf.class)
+                .assertNotContainsWarnings("3:8-3:10:verifier:" + Bundle.ERR_ConvertToSwitchPatternInstanceOf());
+    }
+    
     @Test
     public void testSimplePatternMatch() throws Exception {
         try {
@@ -122,6 +154,37 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "        return formatted;\n"
                         + "    }\n"
                         + "}\n");
+    }
+    
+    @Test
+    public void testSimplePatternMatchNoHint() throws Exception {
+        try {
+            SourceVersion.valueOf("RELEASE_17");
+        } catch (IllegalArgumentException ex) {
+            //OK, skip test
+            return;
+        }
+        HintTest.create()
+                .input("package test;\n"
+                        + "public class Test {\n"
+                        + "    static String formatter(Object o, Object p) {\n"
+                        + "        String formatted = \"unknown\";\n"
+                        + "        if (o instanceof Integer i) {\n"
+                        + "            formatted = String.format(\"int %d\", i);\n"
+                        + "        } else if (o instanceof Long l) {\n"
+                        + "            formatted = String.format(\"long %d\", l);\n"
+                        + "        } else if (p instanceof Double d) {\n"
+                        + "            formatted = String.format(\"double %f\", p);\n"
+                        + "        } else if (o instanceof String s) {\n"
+                        + "            formatted = String.format(\"String %s\", s);\n"
+                        + "        }\n"
+                        + "        return formatted;\n"
+                        + "    }"
+                        + "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .options("--enable-preview")
+                .run(ConvertToSwitchPatternInstanceOf.class)
+                .assertNotContainsWarnings("4:8-4:10:verifier:" + Bundle.ERR_ConvertToSwitchPatternInstanceOf());
     }
 
     @Test
@@ -181,9 +244,45 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "    }\n"
                         + "}\n");
     }
+    
+    @Test
+    public void testSimpleSwitchWithNullNoHint() throws Exception {
+        try {
+            SourceVersion.valueOf("RELEASE_17");
+        } catch (IllegalArgumentException ex) {
+            //OK, skip test
+            return;
+        }
+        HintTest.create()
+                .input("package test;\n"
+                        + "public class Test {\n"
+                        + "     private String formatter(Object o, Object p) {\n"
+                        + "        String formatted = \"unknown\";\n"
+                        + "        if (o == null) {\n"
+                        + "            formatted = \"null\";\n"
+                        + "        }\n"
+                        + "        switch (p) {\n"
+                        + "            case Integer i ->\n"
+                        + "                formatted = String.format(\"int %d\", i);\n"
+                        + "            case Long l ->\n"
+                        + "                formatted = String.format(\"long %d\", l);\n"
+                        + "            case Double d ->\n"
+                        + "                formatted = String.format(\"double %f\", d);\n"
+                        + "            case String s ->\n"
+                        + "                formatted = String.format(\"String %s\", s);\n"
+                        + "            case default -> formatted = \"unknown\";\n"
+                        + "        }\n"
+                        + "        return formatted;\n"
+                        + "    }"
+                        + "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .options("--enable-preview")
+                .run(ConvertToSwitchPatternInstanceOf.class)
+                .assertNotContainsWarnings("4:8-4:24:verifier:" + Bundle.ERR_ConvertToSwitchPatternInstanceOf());
+    }
 
     @Test
-    public void testSingleStatements() throws Exception {
+    public void testSingleStatementsStaticVariable() throws Exception {
         try {
             SourceVersion.valueOf("RELEASE_17");
         } catch (IllegalArgumentException ex) {
@@ -195,21 +294,24 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "public class Test {\n"
                         + "     private int formatter(Object o) {\n"
                         + "        String formatted = \"unknown\";\n"
-                        + "        if (o instanceof String) { \n"
-                        + "            String s = (String) o;\n"
+                        + "        if (Test2.a instanceof String) { \n"
+                        + "            String s = (String) Test2.a;\n"
                         + "            System.out.println(s);\n"
-                        + "        } else if (o instanceof Integer) {\n"
-                        + "            Integer i = (Integer) o;\n"
+                        + "        } else if (Test2.a instanceof Integer) {\n"
+                        + "            Integer i = (Integer) Test2.a;\n"
                         + "            System.out.println(i);\n"
-                        + "        } else if (o instanceof Character) {\n"
-                        + "            Character c = (Character) o;\n"
+                        + "        } else if (Test2.a instanceof Character) {\n"
+                        + "            Character c = (Character) Test2.a;\n"
                         + "            return 1;\n"
                         + "        } else {\n"
                         + "            return 1;\n"
                         + "        }\n"
                         + "        return -1;\n"
                         + "    }"
-                        + "}\n")
+                        + "}\n"
+                        + "class Test2{\n"
+                        + "     public static Object a;\n"
+                        + "}")
                 .sourceLevel(SourceVersion.latest().name())
                 .options("--enable-preview")
                 .run(ConvertToSwitchPatternInstanceOf.class)
@@ -220,7 +322,7 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "public class Test {\n"
                         + "     private int formatter(Object o) {\n"
                         + "        String formatted = \"unknown\";\n"
-                        + "        switch (o) {\n"
+                        + "        switch (Test2.a) {\n"
                         + "            case String s -> System.out.println(s);\n"
                         + "            case Integer i -> System.out.println(i);\n"
                         + "            case Character c -> {\n"
@@ -232,7 +334,10 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "        }\n"
                         + "        return -1;\n"
                         + "    }\n"
-                        + "}\n");
+                        + "}\n"
+                        + "class Test2{\n"
+                        + "     public static Object a;\n"
+                        + "}");
     }
 
     @Test
@@ -301,7 +406,7 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
     }
 
     @Test
-    public void testEmptyStatements() throws Exception {
+    public void testEmptyStatementsMethodInvocation() throws Exception {
         try {
             SourceVersion.valueOf("RELEASE_17");
         } catch (IllegalArgumentException ex) {
@@ -313,19 +418,24 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "public class Test {\n"
                         + "     private int formatter(Object o) {\n"
                         + "        String formatted = \"unknown\";\n"
-                        + "        if (o instanceof String) { \n"
-                        + "            String s = (String) o;\n"
+                        + "        if (Test2.m() instanceof String) { \n"
+                        + "            String s = (String) Test2.m();\n"
                         + "            System.out.println(s);\n"
-                        + "        } else if (o instanceof Integer) {\n"
-                        + "            Integer i = (Integer) o;\n"
+                        + "        } else if (Test2.m() instanceof Integer) {\n"
+                        + "            Integer i = (Integer) Test2.m();\n"
                         + "            System.out.println(i);\n"
-                        + "        } else if (o instanceof Character) {\n"
-                        + "            Character c = (Character) o;\n"
+                        + "        } else if (Test2.m() instanceof Character) {\n"
+                        + "            Character c = (Character) Test2.m();\n"
                         + "        } else {\n"
                         + "        }\n"
                         + "        return -1;\n"
                         + "    }"
-                        + "}\n")
+                        + "}\n"
+                        + "class Test2{\n"
+                        + "     public static Object m(){\n"
+                        + "         return \"method invocation\";\n"
+                        + "     }"
+                        + "}")
                 .sourceLevel(SourceVersion.latest().name())
                 .options("--enable-preview")
                 .run(ConvertToSwitchPatternInstanceOf.class)
@@ -336,7 +446,7 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "public class Test {\n"
                         + "     private int formatter(Object o) {\n"
                         + "        String formatted = \"unknown\";\n"
-                        + "        switch (o) {\n"
+                        + "        switch (Test2.m()) {\n"
                         + "            case String s -> System.out.println(s);\n"
                         + "            case Integer i -> System.out.println(i);\n"
                         + "            case Character c -> {\n"
@@ -346,6 +456,11 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "        }\n"
                         + "        return -1;\n"
                         + "    }\n"
-                        + "}\n");
+                        + "}\n"
+                        + "class Test2{\n"
+                        + "     public static Object m(){\n"
+                        + "         return \"method invocation\";\n"
+                        + "     }"
+                        + "}");
     }
 }
